# Monitor360

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.frontend  asociaciones.csv  debug_uisp_token.py  docker-compose.yml  promtail-config.yaml  pyproject.toml  pytest.ini  requirements.txt  test_enriched_topology.py  topology_enriched.json
.next/: build-manifest.json  react-loadable-manifest.json  trace
.next/cache/: .rscinfo
.next/server/: interception-route-rewrite-manifest.js  middleware-build-manifest.js  middleware-react-loadable-manifest.js  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/types/: cache-life.d.ts
app/: __init__.py  main.py  supabase_client.py
app/routers/: __init__.py  alarms.py  mikrotik.py  monitoring.py  status.py  topologia.py  uisp.py
app/services/: __init__.py  alarms_service.py  associate_clients.py  client_service.py  discovery.py  discovery_service.py  mikrotik_service.py  monitoring_service.py  topology_enricher.py  trunk_service.py  uisp_service.py  verify_uisp_data.py
app/utils/: clientes_loader.py  mikrotik_connect.py
frontend/: jsconfig.json  package-lock.json  package.json
frontend/components/: Status.jsx  (+1 more)
legacy_tests/: test_api.py  test_associations.py  test_credentials.py  test_discovery.py
monitor360/: __main__.py
monitor360.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
reports/: clientes_sin_match.json  detalle_uisp_vs_clients.csv  resumen_uisp_vs_clients.json
tests/: test_client_service.py
(+16 files in other folders)
